# learning-srasterizer

./: CMakeLists.txt  README.md
.cache/clangd/index/: camera.c.034A4FFED99A9E2F.idx  camera.h.359AB1610E17387A.idx  engine.c.21EB86BCF75E2834.idx  engine.h.2A7349F1F64F4BFC.idx  main.c.B0A0CCB867A2E687.idx  math.c.1C4005A3597E15E5.idx  math.h.48239F08F709E761.idx  mesh.c.FF4AFF60B1FE52F7.idx  mesh.h.8F937587A7A5BEAB.idx  modelLoad.c.3F07B10FC9598849.idx  modelLoad.h.CA054A9FA4740D96.idx  pixelbuffer.h.95ADE4B0A49FCCD6.idx  rasterizer.c.33B2B1D2D31E4EEF.idx  rasterizer.h.406F856B8961C38C.idx  rmath.c.5475675B3F0111A6.idx  rmath.h.7727891327FCB99A.idx  scene.c.2EEB1E2C6A3D3CFD.idx  scene.h.651C491CB3AA2C27.idx  transform.c.722669194B5B986E.idx  transform.h.D979800AB1273823.idx  triangle.c.2CA8E464BCC121F9.idx  triangle.h.1C95295CAE552B13.idx  vertex.h.18DC41FB49411613.idx
inc/: camera.h  engine.h  math.h  mesh.h  modelLoad.h  pixelbuffer.h  rasterizer.h  rmath.h  scene.h  transform.h  triangle.h  vertex.h
src/: camera.c  engine.c  main.c  mesh.c  modelLoad.c  rasterizer.c  rmath.c  scene.c  transform.c  triangle.c
